[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain_experimental"
version = "0.0.1"
description = "Your package description"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain"

[tool.poetry.dependencies]
python = "^3.8"
langchain-core = "^0.2.10"
langchain-community = "^0.2.6"

# Add any other dependencies specific to your package

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.20.3"
# Add any other development dependencies
